--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,65 @@
-/*  your css code here. If applicable */
+#grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(5, 100px);
+  gap: 10px;
+  background-color: white;
+}
+
+#grid div {
+  background-color: green;
+  color: white;
+  font-size: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* Layout structure */
+#grid div:nth-child(1) {
+  grid-column: 1 / 4; /* spans all 3 columns */
+}
+
+#grid div:nth-child(2) {
+  grid-row: 2 / 4; /* spans vertically 2 rows */
+}
+
+#grid div:nth-child(3) {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+}
+
+#grid div:nth-child(4) {
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+}
+
+#grid div:nth-child(5) {
+  grid-column: 2 / 3;
+  grid-row: 3 / 4;
+}
+
+#grid div:nth-child(6) {
+  grid-column: 3 / 4;
+  grid-row: 3 / 4;
+}
+
+#grid div:nth-child(7) {
+  grid-column: 1 / 2;
+  grid-row: 4 / 5;
+}
+
+#grid div:nth-child(8) {
+  grid-column: 2 / 3;
+  grid-row: 4 / 5;
+}
+
+#grid div:nth-child(9) {
+  grid-column: 3 / 4;
+  grid-row: 4 / 5;
+}
+
+#grid div:nth-child(10) {
+  grid-column: 1 / 4;
+  grid-row: 5 / 6;
+}
